--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@ body {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    position:fixed;
+    position: fixed;
     border-bottom: 1px solid seashell;
     overflow: auto;
-    margin: 0;
     padding: 0;
+    margin: 0 auto;
 
 }
 .nav-logo-img {
@@ -34,26 +34,9 @@ a {
 
 }
 
-.banner-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 56px;
-    background-size: 1200px;
-    width: 50%;
-    height: 700px;
+div.banner-img {
     position: relative;
+    padding-top: 60px;
 
-}
 
-
-.center-text {
-        position: absolute;
-        text-align: center;
-        top: 50%;
-        width: fit-content;
-        background-color: black;
-        color: white;
-        padding-left: 20px;
-        padding-right: 20px
 }
