--- a/style.css
+++ b/style.css
@@ -15,12 +15,10 @@ body {
     border-bottom: 1px solid seashell;
     overflow: auto;
     padding: 0;
-    margin: 0 auto;
 
 }
 .nav-logo-img {
     height: 50px;
-    padding-left: 10px;
 }
 
 .nav-list {
@@ -36,7 +34,21 @@ a {
 
 div.banner-img {
     position: relative;
-    padding-top: 60px;
+    padding-top: 80px;
+    text-align: center;
+}
 
+.TOTM {
+text-align: center;
+}
 
+.img-container {
+  display: flex;
+}
+
+.img-cards {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  flex-flow: wrap column;
 }
