--- a/style.css
+++ b/style.css
@@ -42,5 +42,10 @@ header img {
 nav {
   text-align: right;
   flex-grow: 1;
-  
+
+}
+
+nav span {
+  display: inline-block;
+  padding: 20px 10px;
 }
