--- a/style.css
+++ b/style.css
@@ -54,8 +54,11 @@ nav span {
 
 #mission {
   height: 700px;
-  background-image: url("./Images/img-mission-background.jpg");
   padding-top: 70px;
+  background-image: url('https://content.codecademy.com/courses/freelance-1/unit-4/img-mission-background.jpg?_gl=1*ss9qje*_ga*NDE1MDA3ODYxNS4xNjc5OTEyNzE5*_ga_3LRZM6TM9L*MTcwNTkxODg2NC4xNTEuMS4xNzA1OTE4ODk1LjI5LjAuMA..');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #mission .content {
@@ -64,4 +67,11 @@ nav span {
   width: 100%;
 }
 
+/* Store section */
 
+#store {
+  height: 700px;
+  width: 1000px;
+  margin: auto;
+  padding-top: 70px;
+}
