- added padding on .item - added height, margin and display to .item img

--- a/style.css
+++ b/style.css
@@ -75,3 +75,13 @@ nav span {
   margin: auto;
   padding-top: 70px;
 }
+
+.item {
+  padding: 5px;
+}
+
+.item img {
+  height: 200px;
+  margin: 10px;
+  display: block;
+}
