--- a/style.css
+++ b/style.css
@@ -85,3 +85,10 @@ nav span {
   margin: 10px;
   display: block;
 }
+
+.item span {
+  display: block;
+  padding: 5px;
+  text-align: center;
+  font-weight: bold;
+}
