css - #contact added height
-footer
added margin left and text align left

--- a/style.css
+++ b/style.css
@@ -120,3 +120,15 @@ nav span {
   flex-direction: column;
   justify-content: center;
 }
+
+/* Contact section */
+
+#contact {
+  height: 200px;
+}
+
+footer {
+  margin-left: 20px;
+  text-align: left;
+}
+
